# web_scraping

./: .gitignore  LICENSE  authors.json  config.ini  log.txt  pyproject.toml  quotes.json
web_scraping/: main.py
