[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["KondratovaLudmila <137877876+KondratovaLudmila@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
